--- a/Templates/VIPER/VIPER module.xctemplate/TemplateInfo.plist
+++ b/Templates/VIPER/VIPER module.xctemplate/TemplateInfo.plist
@@ -18,5 +18,48 @@
 	<string>File</string>
 	<key>MainTemplateFile</key>
 	<string>___FILEBASENAME___.swift</string>
+	<key>Options</key>
+	<array>
+		<dict>
+			<key>Description</key>
+			<string>The name of the module to create</string>
+			<key>Identifier</key>
+			<string>moduleName</string>
+			<key>Name</key>
+			<string>Module Name:</string>
+			<key>NotPersisted</key>
+			<true/>
+			<key>Required</key>
+			<true/>
+			<key>Type</key>
+			<string>text</string>
+		</dict>
+		<dict>
+			<key>Default</key>
+			<string>___VARIABLE_moduleName___</string>
+			<key>Identifier</key>
+			<string>productName</string>
+			<key>Type</key>
+			<string>static</string>
+		</dict>
+		<dict>
+			<key>Description</key>
+			<string>Base class for View Controller</string>
+			<key>Identifier</key>
+			<string>vcBaseClass</string>
+			<key>Name</key>
+			<string>View Controller Base Class:</string>
+			<key>Type</key>
+			<string>combo</string>
+			<key>Values</key>
+			<array>
+				<string>VIPERViewController</string>
+				<string>VIPERTableViewController</string>
+				<string>VIPERCollectionViewController</string>
+			</array>
+			<key>Required</key>
+			<string>YES</string>
+		</dict>
+	</array>
 </dict>
 </plist>
